# comp-prog

./: comp-prog.cabal
src/: BarnTree.hs  BarnTree2.hs  Main.hs  Util.hs  covptcnt.c
ver/: BarnTreeVerifier.hs  btver.c
